# OOP-Consolidation

cinephilia-app/: CMakeLists.txt  app.cpp  masterpieces.csv  testMasterpieces.csv
cinephilia-app/Domain/: Documentary.cpp  Documentary.h  Movie.cpp  Movie.h  Object.h  TheatrePlay.cpp  TheatrePlay.h
cinephilia-app/Exceptions/: GenericException.cpp  GenericException.h
cinephilia-app/GraphicUserInterface/: GraphicUserInterface.cpp  GraphicUserInterface.h
cinephilia-app/Repository/: FileRepository.cpp  FileRepository.h  Repository.h  RepositoryInMemory.cpp  RepositoryInMemory.h
cinephilia-app/Service/: Service.cpp  Service.h
cinephilia-app/Tests/: Test.cpp  Test.h
cinephilia-app/UserInterface/: UserInterface.cpp  UserInterface.h
cinephilia-app/Validators/: DocumentaryValidator.cpp  DocumentaryValidator.h  MovieValidator.cpp  MovieValidator.h  TheatrePlayValidator.cpp  TheatrePlayValidator.h
expenditures_laboratory/: CMakeLists.txt  app.cpp
expenditures_laboratory/Domain/: Expenditure.cpp  Expenditure.h
expenditures_laboratory/Repository/: Repository.cpp  Repository.h
expenditures_laboratory/Service/: Service.cpp  Service.h
expenditures_laboratory/Tests/: Test.cpp  Test.h
expenditures_laboratory/UserInterface/: UserInterface.cpp  UserInterface.h
orders_project/: CMakeLists.txt  app.cpp  orders.txt  testOrders.txt
orders_project/Domain/: Order.cpp  Order.h
orders_project/Exceptions/: OrderException.cpp  OrderException.h  RepositoryException.cpp  RepositoryException.h  ServiceException.cpp  ServiceException.h
orders_project/Repository/: FileRepository.cpp  FileRepository.h  Repository.cpp  Repository.h
orders_project/Service/: Service.cpp  Service.h
orders_project/Test/: Test.cpp  Test.h
orders_project/UserInterface/: UserInterface.cpp  UserInterface.h
orders_project/Validators/: OrderValidator.cpp  OrderValidator.h
